--- a/_data/personalGameProjects2.yml
+++ b/_data/personalGameProjects2.yml
@@ -1,3 +1,8 @@
+- image: "/assets/media/gm_robro.png"
+  title: "RoBro"
+  description: ""
+  link: "/projects/roBro"
+
 - image: "/assets/media/gm_planetDef.png"
   title: "Planet Defense"
   description: ""
