--- a/_data/otherProjects2.yml
+++ b/_data/otherProjects2.yml
@@ -14,6 +14,6 @@
   link: ""
 
 - image: "/assets/media/op_chemHelper.png"
-  title: "Chemisrty Study Helper"
+  title: "Chemistry Study Helper"
   description: ""
   link: "/projects/cariocaClub"
