more project pages

--- a/_data/otherProjects2.yml
+++ b/_data/otherProjects2.yml
@@ -1,19 +1,19 @@
 - image: "/assets/media/op_ssfs.png"
   title: "SSFS: File System in User Space"
   description: ""
-  link: ""
+  link: "/projects/ssfs"
 
 - image: "/assets/media/op_blurKernel.jpg"
   title: "Blur Kernel Estimation & Deconvolution Method Analysis"
   description: ""
-  link: "/projects/cariocaClub"
+  link: "/projects/blurKernel"
 
 - image: "/assets/media/op_cellular.png"
   title: "Cellular Life Simulation"
   description: ""
-  link: ""
+  link: "/projects/lifeSim"
 
 - image: "/assets/media/op_chemHelper.png"
   title: "Chemistry Study Helper"
   description: ""
-  link: "/projects/cariocaClub"
+  link: "/projects/chemHelper"
