--- a/_data/otherProjects1.yml
+++ b/_data/otherProjects1.yml
@@ -1,7 +1,7 @@
 - image: "/assets/media/op_aioPC.jpg"
   title: "Converting Broken Laptop to All-In-One PC"
   description: ""
-  link: "/projects/"
+  link: "/projects/aioPC"
 
 - image: "/assets/media/op_3dprint.jpg"
   title: "3D Prinitng"
@@ -11,9 +11,9 @@
 - image: "/assets/media/op_recoBot.jpg"
   title: "Game Recommendation Chat Bot"
   description: ""
-  link: "/projects/cariocaClub"
+  link: "/projects/recoBot"
 
 - image: "/assets/media/op_blogon.png"
   title: "BlogOn: Blogging Engine"
   description: ""
-  link: "/projects/tpg"
+  link: "/projects/blogOn"
