--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,17 @@ plugins:
 
 # A list of the pages to display in the navigation bar
 header_pages:
+  - name: "About Me"
+    href: "#AboutMe"
+
+  - name: "Professional Projects"
+    href: "#ProfessionalProjects"
+
+  - name: "Personal Game Projects"
+    href: "#PersonalGameProjects"
+
+  - name: "Other Projects"
+    href: "#OtherProjects"
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
