--- a/_data/personalGameProjects2.yml
+++ b/_data/personalGameProjects2.yml
@@ -1,7 +1,7 @@
-- image: "/assets/media/gm_robro.png"
-  title: "RoBro"
+- image: "/assets/media/gm_blockBounce.png"
+  title: "Block Bounce"
   description: ""
-  link: "/projects/roBro"
+  link: "/projects/blockBounce"
 
 - image: "/assets/media/gm_planetDef.png"
   title: "Planet Defense"
