--- a/_data/externalPages.yml
+++ b/_data/externalPages.yml
@@ -10,6 +10,10 @@
   title: "Gaming Photography"
   link: "https://www.instagram.com/soodplaysgames/"
 
+- image: "/assets/media/yt-page-icon.png"
+  title: "YouTube Channel"
+  link: "https://www.youtube.com/channel/UCFGnrKOP7YKxyg1OTKgX2tg"
+
 - image: "/assets/media/ln-page-icon.png"
   title: "Professional Profile"
   link: "https://www.linkedin.com/in/saurabhsood95"
