--- a/_data/otherProjects1.yml
+++ b/_data/otherProjects1.yml
@@ -4,7 +4,7 @@
   link: "/projects/aioPC"
 
 - image: "/assets/media/op_3dprint.jpg"
-  title: "3D Prinitng"
+  title: "3D Printing"
   description: ""
   link: "/projects/3dPrinting"
 
