--- a/_data/professionalProjects.yml
+++ b/_data/professionalProjects.yml
@@ -1,3 +1,8 @@
+- image: "/assets/media/proj_parchis.webp"
+  title: "Parchis Club"
+  description: ""
+  link: "/projects/parchisClub"
+
 - image: "/assets/media/proj_carrom.webp"
   title: "Carrom Gold"
   description: ""
