--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 plugins:
   - jekyll-feed
   - jekyll-sitemap
+  - jekyll-seo-tag
 
 # A list of the pages to display in the navigation bar
 header_pages:
