--- a/_data/rapidProjects.yml
+++ b/_data/rapidProjects.yml
@@ -1,24 +1,14 @@
-- image: "/assets/media/proj_parchis.webp"
-  title: "Parchis Club"
-  description: ""
-  link: "/projects/parchisClub"
+- image: "/assets/media/gm_doomBook.png"
+  title: "Doom Book (VR)"
+  description: "" 
+  link: "/projects/doomBook"
 
-- image: "/assets/media/proj_carrom.webp"
-  title: "Carrom Gold"
-  description: ""
-  link: "/projects/carromGold"
+- image: "/assets/media/gm_contains.png"
+  title: "'Contains' Gymnasium"
+  description: "" 
+  link: "/projects/containsGym"
 
-- image: "/assets/media/proj_baloot.webp"
-  title: "Baloot Gold"
+- image: "/assets/media/gm_toyPlanet.png"
+  title: "Toy Planet"
   description: ""
-  link: "/projects/balootGold"
-
-- image: "/assets/media/proj_carioca.webp"
-  title: "Carioca Club"
-  description: ""
-  link: "/projects/cariocaClub"
-
-- image: "/assets/media/proj_tpg.webp"
-  title: "Teen Patti Gold"
-  description: ""
-  link: "/projects/tpg"
+  link: "/projects/toyPlanet"
