New contetn, cleanup

--- a/_data/professionalProjects.yml
+++ b/_data/professionalProjects.yml
@@ -1,24 +1,24 @@
 - image: "/assets/media/proj_parchis.webp"
   title: "Parchis Club"
-  description: ""
+  description: "A multiplayer board dice game for mobile made with Unity"
   link: "/projects/parchisClub"
 
 - image: "/assets/media/proj_carrom.webp"
   title: "Carrom Gold"
-  description: ""
+  description: "A multiplayer disc pool game for mobile made with Unity"
   link: "/projects/carromGold"
 
 - image: "/assets/media/proj_baloot.webp"
   title: "Baloot Gold"
-  description: ""
+  description: "A multiplayer Arabic trick card game for mobile made with Unity"
   link: "/projects/balootGold"
 
 - image: "/assets/media/proj_carioca.webp"
   title: "Carioca Club"
-  description: ""
+  description: "A Rummy style Chilean card game for mobile made with Cocos2D-x"
   link: "/projects/cariocaClub"
 
 - image: "/assets/media/proj_tpg.webp"
   title: "Teen Patti Gold"
-  description: ""
+  description: "A Indian poker card game for mobile made with Cocos2D-x"
   link: "/projects/tpg"
