--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ header_pages:
     href: "/#ProfessionalGames"
 
   - name: "Personal Games"
-    href: "/#PersonalGameProjects"
+    href: "/#PersonalGames"
 
   - name: "Machine Learning"
     href: "/#MachineLearningProjects"
