--- a/_data/studentProjects.yml
+++ b/_data/studentProjects.yml
@@ -1,4 +1,4 @@
-- image: "/assets/media/gm_cardboard_wide.png"
-  title: "Cardboard Chronicles (WIP)"
-  description: "A puzzle action adventure game through an entire world made of cardboard"
+- image: "/assets/media/gm_cardboard.png"
+  title: "AI Exploration"
+  description: "A collection of projects exploring various Game AI & Behavior systems"
   link: "/projects/cardboard"
