--- a/_data/studentProjects2.yml
+++ b/_data/studentProjects2.yml
@@ -1,6 +1,6 @@
 - image: "/assets/media/gm_cardboard_wide.png"
   title: "Cardboard Chronicles (WIP)"
-  description: "A puzzle action adventure game through an entire world made of cardboard"
+  description: "A warm-hearted puzzle adventure game through an entire world made of cardboard"
   link: "/projects/cardboard"
 
 - image: "/assets/media/gm_goml.png"
